<resources>
    <string name="app_name">Pet Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_username">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_role">Customer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--SharedPreferences-->
    <string name="preference_file_key">saveInfoFile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_user">User</string>
    <string name="menu_logout">Logout</string>

</resources>