<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"> <!--single chỉ định trong group chỉ cho chon 1 item-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_user" />
    </group>
    <group android:id="@+id/groupAdmin" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home2"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_user2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_user" />
    </group>

</menu>